Fixed whitespace issue with favorites list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background:#343a40;
+    background: #343a40;
 }
 
 h6 {
@@ -9,32 +9,37 @@ h6 {
 
 
 /* ------------- Left Content Area ------------ */
-#logo{
-    max-width:150px;
-    width:100%
+
+#logo {
+    max-width: 150px;
+    width: 100%
 }
 
-#search-icon, #stream-icon, #popcorn-icon {
-    max-width:125px;
-    width:100%;
+#search-icon,
+#stream-icon,
+#popcorn-icon {
+    max-width: 125px;
+    width: 100%;
 }
 
-#left{
+#left {
     border-right: 4px solid #ef4273;
 }
-.left-contents{
-   /*--- Fill for Responsive ---*/
+
+.left-contents {
+    /*--- Fill for Responsive ---*/
 }
 
-#submit{
+#submit {
     background: #ef4273;
     border: 1px solid #f5608a;
 }
 
-#submit:hover{
+#submit:hover {
     background: #f69075;
     border: 1px solid #f78667;
 }
+
 
 /* ------------ Review/Ratings ------------------*/
 
@@ -84,27 +89,32 @@ h6 {
 }
 
 .favorite-card {
-    max-width: 145px;
+    width: 145px;
     float: left;
     margin: 4px 4px;
 }
 
-.info-btn{
+.fav-img {
+    height: 210px;
+    width: auto;
+}
+
+.info-btn {
     background: #ef4273;
     border: 1px solid #f5608a;
 }
 
-.info-btn:hover{
+.info-btn:hover {
     background: #ec6188;
     border: 1px solid #e97898;
 }
 
-.remove-btn{
+.remove-btn {
     background: #202e5e;
     border: 1px solid #34457e;
 }
 
-.remove-btn:hover{
+.remove-btn:hover {
     background: #333f68;
     border: 1px solid #4d587a;
 }
@@ -112,7 +122,10 @@ h6 {
 
 /* --------------- Streaming Section ------------------ */
 
-#stream-platform-netflix, #stream-platform-amazon-prime, #stream-platform-amazon-instant, #stream-platform-itunes {
+#stream-platform-netflix,
+#stream-platform-amazon-prime,
+#stream-platform-amazon-instant,
+#stream-platform-itunes {
     max-width: 200px;
     width: 100%;
 }
@@ -177,6 +190,7 @@ a {
     padding-bottom: 1px;
     margin-bottom: 5px;
 }
+
 
 /* #zipCode {
     margin-left: 450px;
